--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,30 +1,36 @@
 {{ define "main" }}
-    {{ $paginator := .Paginate (where .Site.RegularPages "Type" "in" .Site.Params.mainSections) }}
-    {{ range $paginator.Pages }}
-        <div class="post animated fadeInDown">
+    <div class="post animated fadeInDown">
+        <div class="post-content">
+
             <div class="post-title">
-                <h3><a href="{{ .RelPermalink }}">{{ .Title }}</a>
-                </h3>
-            </div>
-            <div class="post-content">
-                <div class="p_part"><p>{{ .Summary }}</p></div>
-            </div>
-            <div class="post-footer">
-                <div class="meta">
-                    <div class="info"><em class="fas fa-calendar-day"></em><span
-                                class="date">{{ .Date.Format "Mon, Jan 2, 2006" }}</span>
-                        {{ with .Params.tags }}
-                            {{- range $index, $el := . -}}
-                                <a class="tag"
-                                   href="{{ ( printf "tags/%s/" ( . | urlize ) ) | relLangURL }}">{{ . }}</a>
-                            {{- end -}}
-                        {{ end }}
+                <h3>{{ .Title }}</h3>
+                {{ if eq .Type "post"}}
+                    <div class="info">
+                        <em class="fas fa-calendar-day"></em>
+                        <span class="date">{{ .Date.Format "Mon, Jan 2, 2006" }}</span>
+                        <em class="fas fa-stopwatch"></em>
+                        <span class="reading-time">{{ i18n "reading_time" .ReadingTime }}</span>
                     </div>
-                </div>
+                {{ end }}
+            </div>
+
+            {{ .Content }}
+        </div>
+        <div class="post-footer">
+            <div class="info">
+                {{ with .Page.Params.Categories }}{{ partial "taxonomy/categories.html" . }}{{ end }}
+                {{ with .Page.Params.Tags }}{{ partial "taxonomy/tags.html" . }}{{ end }}
             </div>
         </div>
-    {{ end }}
-    <div class="pagination">
-        {{ template "_internal/pagination.html" . }}
+
+        {{ if eq .Type "post"}}
+            {{ if .Site.DisqusShortname -}}
+                <div id="fb_comments_container">
+                    <h2>{{ i18n "comments" }}</h2>
+                    {{ template "_internal/disqus.html" . }}
+                </div>
+            {{- end }}
+        {{ end }}
     </div>
+
 {{ end }}
