--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -1,4 +1,4 @@
-<div class="sidebar animated fadeInDown">
+<div class="sidebar fadeInDown">
     <div class="logo-title">
         <div class="title">
             <img src="{{ .Site.Params.profilePicture | absURL }}" alt="profile picture">
@@ -10,11 +10,11 @@
     </div>
     <ul class="social-links">
         {{ range $item := .Site.Params.socialIcons }}
-            <li>
-                <a href="{{ $item.url }}" rel="me" aria-label="{{ $item.title }}">
-                    <i class="{{ $item.icon }} fa-2x" aria-hidden="true"></i>
-                </a>
-            </li>
+        <li>
+            <a href="{{ $item.url }}" rel="me" aria-label="{{ $item.title }}">
+                <i class="{{ $item.icon }} fa-2x" aria-hidden="true"></i>
+            </a>
+        </li>
         {{ end }}
     </ul>
     <div class="footer">
