--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -1,4 +1,4 @@
-<div class="page-top animated fadeInDown">
+<div class="page-top">
     <a role="button" class="navbar-burger" data-target="navMenu" aria-label="menu" aria-expanded="false">
         <span aria-hidden="true"></span>
         <span aria-hidden="true"></span>
@@ -7,21 +7,15 @@
     <ul class="nav" id="navMenu">
         {{ $url := .RelPermalink }}
         {{ range .Site.Menus.main }}
-            {{ $active := eq $url .URL }}
-            <li><a {{if $active }}class="current"{{end}}
-                   href="{{ .URL }}"
-                        {{ if strings.HasPrefix .URL "http" }}
-                            target="_blank"
-                            rel="noopener noreferrer"
-                        {{ end }}
-                   title="{{ .Title }}">{{ .Name }}</a></li>
+        {{ $active := eq $url .URL }}
+        <li><a {{if $active }}class="current" {{end}} href="{{ .URL }}" {{ if strings.HasPrefix .URL "http" }}
+                target="_blank" rel="noopener noreferrer" {{ end }} title="{{ .Title }}">{{ .Name }}</a></li>
         {{ end }}
         {{ if .Site.IsMultiLingual }}
-            {{ range $.Site.Home.AllTranslations }}
-                <li><a href="{{ .Permalink }}"
-                       title="{{ .Language.LanguageName }}">{{ .Language.LanguageName }}</a>
-                </li>
-            {{ end }}
+        {{ range $.Site.Home.AllTranslations }}
+        <li><a href="{{ .Permalink }}" title="{{ .Language.LanguageName }}">{{ .Language.LanguageName }}</a>
+        </li>
+        {{ end }}
         {{ end }}
         <li class="theme-switch-item">
             <a class="theme-switch" title="Switch Theme">
